create personal website

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <img src=https://i.ytimg.com/vi/-ccHF9RuiNE/maxresdefault.jpg>
-     <h1> ElectroAxoltol </h1> 
+     <h1> ElectroAxolotl </h1> 
      
     <p>Will be boss at minecraft
     for 15 dollars.</p>
